// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Catalog Desktop View Matches snapshot for "All Products" 1`] = `
"
  <header>
    <div class="header-logo">
      <img src="images/logo.jpeg" alt="M/A Imports Logo">
    </div>
  </header>

  <nav aria-label="Main Navigation">
    <button id="menu-toggle" aria-expanded="false" aria-controls="nav-menu">☰</button>
    <ul id="nav-menu">
      <li><button data-category="all">Início</button></li>
      <li><button data-category="shoes">Calçados</button></li>
      <li><button data-category="slippers">Chinelos</button></li>
      <li><button data-category="tshirts">Camisetas</button></li>
    </ul>
  </nav>

  <main>
    <h2 id="category-heading">Todos os Produtos</h2>
    <ul id="product-list"><li class="product-item">
          <img src="images/shoes/nike/12021658-nike-shox.jpeg" alt="[12021658] Nike Shox">
          <div class="product-details">
            <h3>[12021658] Nike Shox</h3>
            
            <span class="size">Tamanho: 37</span>
            <span class="old-price">R$&nbsp;259,00</span>
             <span class="new-price">R$&nbsp;249,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12022216-nike-shox.jpeg" alt="[12022216] Nike Shox">
          <div class="product-details">
            <h3>[12022216] Nike Shox</h3>
            
            <span class="size">Tamanho: 37</span>
            <span class="old-price">R$&nbsp;259,00</span>
             <span class="new-price">R$&nbsp;249,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021724-nike-shox.jpeg" alt="[12021724] Nike Shox">
          <div class="product-details">
            <h3>[12021724] Nike Shox</h3>
            
            <span class="size">Tamanho: 40</span>
            <span class="old-price">R$&nbsp;269,00</span>
             <span class="new-price">R$&nbsp;259,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12022214-nike-shox.jpeg" alt="[12022214] Nike Shox">
          <div class="product-details">
            <h3>[12022214] Nike Shox</h3>
            
            <span class="size">Tamanho: 40</span>
            <span class="old-price">R$&nbsp;269,00</span>
             <span class="new-price">R$&nbsp;259,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021722-nike-shox-neymar.jpeg" alt="[12021722] Nike Shox Neymar">
          <div class="product-details">
            <h3>[12021722] Nike Shox Neymar</h3>
            
            <span class="size">Tamanho: 41</span>
            <span class="old-price">R$&nbsp;269,00</span>
             <span class="new-price">R$&nbsp;259,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021734-nike-shox-neymar.jpeg" alt="[12021734] Nike Shox Neymar">
          <div class="product-details">
            <h3>[12021734] Nike Shox Neymar</h3>
            
            <span class="size">Tamanho: 41</span>
            <span class="old-price">R$&nbsp;269,00</span>
             <span class="new-price">R$&nbsp;259,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021718-nike-r4.jpeg" alt="[12021718] Nike R4">
          <div class="product-details">
            <h3>[12021718] Nike R4</h3>
            
            <span class="size">Tamanho: 34</span>
            <span class="old-price">R$&nbsp;229,00</span>
             <span class="new-price">R$&nbsp;219,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021716-nike-r4.jpeg" alt="[12021716] Nike R4">
          <div class="product-details">
            <h3>[12021716] Nike R4</h3>
            
            <span class="size">Tamanho: 35</span>
            <span class="old-price">R$&nbsp;229,00</span>
             <span class="new-price">R$&nbsp;219,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021703-nike-air-force.jpeg" alt="[12021703] Nike Air Force">
          <div class="product-details">
            <h3>[12021703] Nike Air Force</h3>
            
            <span class="size">Tamanho: 39</span>
            <span class="old-price">R$&nbsp;219,00</span>
             <span class="new-price">R$&nbsp;209,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021710-nike-air-force.jpeg" alt="[12021710] Nike Air Force">
          <div class="product-details">
            <h3>[12021710] Nike Air Force</h3>
            
            <span class="size">Tamanho: 42</span>
            <span class="old-price">R$&nbsp;269,00</span>
             <span class="new-price">R$&nbsp;259,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021739-nike-air-force.jpeg" alt="[12021739] Nike Air Force">
          <div class="product-details">
            <h3>[12021739] Nike Air Force</h3>
            
            <span class="size">Tamanho: 42</span>
            <span class="old-price">R$&nbsp;219,00</span>
             <span class="new-price">R$&nbsp;209,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021747-nike-air-force.jpeg" alt="[12021747] Nike Air Force">
          <div class="product-details">
            <h3>[12021747] Nike Air Force</h3>
            
            <span class="size">Tamanho: 38, 41, 42</span>
            <span class="old-price">R$&nbsp;229,00</span>
             <span class="new-price">R$&nbsp;219,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021737-nike-dunk-low-pro.jpeg" alt="[12021737] Nike Dunk Low Pro">
          <div class="product-details">
            <h3>[12021737] Nike Dunk Low Pro</h3>
            
            <span class="size">Tamanho: 35</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021719-nike-dunk-low-pro.jpeg" alt="[12021719] Nike Dunk Low Pro">
          <div class="product-details">
            <h3>[12021719] Nike Dunk Low Pro</h3>
            
            <span class="size">Tamanho: 36</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12022152-nike-dunk-low-pro.jpeg" alt="[12022152] Nike Dunk Low Pro">
          <div class="product-details">
            <h3>[12022152] Nike Dunk Low Pro</h3>
            
            <span class="size">Tamanho: 39, 42</span>
            <span class="old-price">R$&nbsp;219,00</span>
             <span class="new-price">R$&nbsp;209,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021733-nike-dunk-low-pro.jpeg" alt="[12021733] Nike Dunk Low Pro">
          <div class="product-details">
            <h3>[12021733] Nike Dunk Low Pro</h3>
            
            <span class="size">Tamanho: 42</span>
            <span class="old-price">R$&nbsp;219,00</span>
             <span class="new-price">R$&nbsp;209,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021707-nike-jordan.jpeg" alt="[12021707] Nike Jordan">
          <div class="product-details">
            <h3>[12021707] Nike Jordan</h3>
            
            <span class="size">Tamanho: 38</span>
            <span class="old-price">R$&nbsp;169,00</span>
             <span class="new-price">R$&nbsp;159,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12022200-nike-air-jordan.jpeg" alt="[12022200] Nike Air Jordan">
          <div class="product-details">
            <h3>[12022200] Nike Air Jordan</h3>
            
            <span class="size">Tamanho: 41</span>
            <span class="old-price">R$&nbsp;229,00</span>
             <span class="new-price">R$&nbsp;219,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/adidas/12022201-adidas-campus.jpeg" alt="[12022201] Adidas Campus">
          <div class="product-details">
            <h3>[12022201] Adidas Campus</h3>
            
            <span class="size">Tamanho: 35</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/adidas/12022202-adidas-campus.jpeg" alt="[12022202] Adidas Campus">
          <div class="product-details">
            <h3>[12022202] Adidas Campus</h3>
            
            <span class="size">Tamanho: 35</span>
            <span class="old-price">R$&nbsp;259,00</span>
             <span class="new-price">R$&nbsp;249,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/adidas/12022208-adidas-campus.jpeg" alt="[12022208] Adidas Campus">
          <div class="product-details">
            <h3>[12022208] Adidas Campus</h3>
            
            <span class="size">Tamanho: 36</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/adidas/12022211-adidas-campus.jpeg" alt="[12022211] Adidas Campus">
          <div class="product-details">
            <h3>[12022211] Adidas Campus</h3>
            
            <span class="size">Tamanho: 39</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/adidas/12022155-adidas-campus.jpeg" alt="[12022155] Adidas Campus">
          <div class="product-details">
            <h3>[12022155] Adidas Campus</h3>
            
            <span class="size">Tamanho: 41</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/adidas/12022210-adidas-campus.jpeg" alt="[12022210] Adidas Campus">
          <div class="product-details">
            <h3>[12022210] Adidas Campus</h3>
            
            <span class="size">Tamanho: 42</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/vans/12021757-vans.jpeg" alt="[12021757] Vans">
          <div class="product-details">
            <h3>[12021757] Vans</h3>
            
            <span class="size">Tamanho: 36</span>
            <span class="old-price">R$&nbsp;259,00</span>
             <span class="new-price">R$&nbsp;249,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/asics/12021714-asics.jpeg" alt="[12021714] Asics">
          <div class="product-details">
            <h3>[12021714] Asics</h3>
            
            <span class="size">Tamanho: 38</span>
            <span class="price">R$&nbsp;89,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/asics/12021736-asics.jpeg" alt="[12021736] Asics">
          <div class="product-details">
            <h3>[12021736] Asics</h3>
            
            <span class="size">Tamanho: 41, 42</span>
            <span class="old-price">R$&nbsp;269,00</span>
             <span class="new-price">R$&nbsp;259,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/slippers/tommy-hilfiger/17021140-tommy-hilfiger.jpeg" alt="[17021140] Tommy Hilfiger">
          <div class="product-details">
            <h3>[17021140] Tommy Hilfiger</h3>
            
            <span class="size">Tamanho: 37/38, 39/40</span>
            <span class="price">R$&nbsp;29,90</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/tshirts/louis-vuitton/27020956-louis-vuitton.jpeg" alt="[27020956] Louis Vuitton">
          <div class="product-details">
            <h3>[27020956] Louis Vuitton</h3>
            <p class="description">Algodão Italiano</p>
            <span class="size">Tamanho: GG</span>
            <span class="price">R$&nbsp;89,90</span>
          </div>
        </li><li class="product-item">
          <img src="images/tshirts/dolce-gabbana/27020957-dolce-gabbana.jpeg" alt="[27020957] Dolce &amp; Gabbana">
          <div class="product-details">
            <h3>[27020957] Dolce &amp; Gabbana</h3>
            <p class="description">Algodão Peruano</p>
            <span class="size">Tamanho: GG</span>
            <span class="price">R$&nbsp;79,90</span>
          </div>
        </li><li class="product-item">
          <img src="images/tshirts/emporio-armani/27021001-emporio-armani.jpeg" alt="[27021001] Emporio Armani">
          <div class="product-details">
            <h3>[27021001] Emporio Armani</h3>
            <p class="description">Algodão Peruano</p>
            <span class="size">Tamanho: M</span>
            <span class="price">R$&nbsp;79,90</span>
          </div>
        </li><li class="product-item">
          <img src="images/tshirts/burberry/27021016-burberry.jpeg" alt="[27021016] Burberry">
          <div class="product-details">
            <h3>[27021016] Burberry</h3>
            <p class="description">Algodão Peruano</p>
            <span class="size">Tamanho: M</span>
            <span class="price">R$&nbsp;79,90</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li></ul>
  </main>

  <!-- Modal container will be injected by the script -->
  
  <footer>
    <p>Versão: 2.0.2 - 0.32</p>
  </footer>

  <script src="scripts.js"></script>


<div id="product-modal">
        <div id="modal-content">
          <button id="modal-close">X</button>
          <div id="modal-image-container">
            <img id="modal-image" src="" alt="">
          </div>
          <div id="modal-controls">
            <button id="prev-image">&lt;</button>
            <button id="zoom-out">-</button>
            <button id="zoom-in">+</button>
            <button id="next-image">&gt;</button>
          </div>
        </div>
      </div>"
`;

exports[`Catalog Desktop View Matches snapshot for "Shoes" 1`] = `
"
  <header>
    <div class="header-logo">
      <img src="images/logo.jpeg" alt="M/A Imports Logo">
    </div>
  </header>

  <nav aria-label="Main Navigation">
    <button id="menu-toggle" aria-expanded="false" aria-controls="nav-menu">☰</button>
    <ul id="nav-menu">
      <li><button data-category="all">Início</button></li>
      <li><button data-category="shoes">Calçados</button></li>
      <li><button data-category="slippers">Chinelos</button></li>
      <li><button data-category="tshirts">Camisetas</button></li>
    </ul>
  </nav>

  <main>
    <h2 id="category-heading">Calçados</h2>
    <ul id="product-list"><li class="product-item">
          <img src="images/shoes/nike/12021658-nike-shox.jpeg" alt="[12021658] Nike Shox">
          <div class="product-details">
            <h3>[12021658] Nike Shox</h3>
            
            <span class="size">Tamanho: 37</span>
            <span class="old-price">R$&nbsp;259,00</span>
             <span class="new-price">R$&nbsp;249,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12022216-nike-shox.jpeg" alt="[12022216] Nike Shox">
          <div class="product-details">
            <h3>[12022216] Nike Shox</h3>
            
            <span class="size">Tamanho: 37</span>
            <span class="old-price">R$&nbsp;259,00</span>
             <span class="new-price">R$&nbsp;249,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021724-nike-shox.jpeg" alt="[12021724] Nike Shox">
          <div class="product-details">
            <h3>[12021724] Nike Shox</h3>
            
            <span class="size">Tamanho: 40</span>
            <span class="old-price">R$&nbsp;269,00</span>
             <span class="new-price">R$&nbsp;259,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12022214-nike-shox.jpeg" alt="[12022214] Nike Shox">
          <div class="product-details">
            <h3>[12022214] Nike Shox</h3>
            
            <span class="size">Tamanho: 40</span>
            <span class="old-price">R$&nbsp;269,00</span>
             <span class="new-price">R$&nbsp;259,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021722-nike-shox-neymar.jpeg" alt="[12021722] Nike Shox Neymar">
          <div class="product-details">
            <h3>[12021722] Nike Shox Neymar</h3>
            
            <span class="size">Tamanho: 41</span>
            <span class="old-price">R$&nbsp;269,00</span>
             <span class="new-price">R$&nbsp;259,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021734-nike-shox-neymar.jpeg" alt="[12021734] Nike Shox Neymar">
          <div class="product-details">
            <h3>[12021734] Nike Shox Neymar</h3>
            
            <span class="size">Tamanho: 41</span>
            <span class="old-price">R$&nbsp;269,00</span>
             <span class="new-price">R$&nbsp;259,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021718-nike-r4.jpeg" alt="[12021718] Nike R4">
          <div class="product-details">
            <h3>[12021718] Nike R4</h3>
            
            <span class="size">Tamanho: 34</span>
            <span class="old-price">R$&nbsp;229,00</span>
             <span class="new-price">R$&nbsp;219,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021716-nike-r4.jpeg" alt="[12021716] Nike R4">
          <div class="product-details">
            <h3>[12021716] Nike R4</h3>
            
            <span class="size">Tamanho: 35</span>
            <span class="old-price">R$&nbsp;229,00</span>
             <span class="new-price">R$&nbsp;219,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021703-nike-air-force.jpeg" alt="[12021703] Nike Air Force">
          <div class="product-details">
            <h3>[12021703] Nike Air Force</h3>
            
            <span class="size">Tamanho: 39</span>
            <span class="old-price">R$&nbsp;219,00</span>
             <span class="new-price">R$&nbsp;209,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021710-nike-air-force.jpeg" alt="[12021710] Nike Air Force">
          <div class="product-details">
            <h3>[12021710] Nike Air Force</h3>
            
            <span class="size">Tamanho: 42</span>
            <span class="old-price">R$&nbsp;269,00</span>
             <span class="new-price">R$&nbsp;259,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021739-nike-air-force.jpeg" alt="[12021739] Nike Air Force">
          <div class="product-details">
            <h3>[12021739] Nike Air Force</h3>
            
            <span class="size">Tamanho: 42</span>
            <span class="old-price">R$&nbsp;219,00</span>
             <span class="new-price">R$&nbsp;209,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021747-nike-air-force.jpeg" alt="[12021747] Nike Air Force">
          <div class="product-details">
            <h3>[12021747] Nike Air Force</h3>
            
            <span class="size">Tamanho: 38, 41, 42</span>
            <span class="old-price">R$&nbsp;229,00</span>
             <span class="new-price">R$&nbsp;219,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021737-nike-dunk-low-pro.jpeg" alt="[12021737] Nike Dunk Low Pro">
          <div class="product-details">
            <h3>[12021737] Nike Dunk Low Pro</h3>
            
            <span class="size">Tamanho: 35</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021719-nike-dunk-low-pro.jpeg" alt="[12021719] Nike Dunk Low Pro">
          <div class="product-details">
            <h3>[12021719] Nike Dunk Low Pro</h3>
            
            <span class="size">Tamanho: 36</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12022152-nike-dunk-low-pro.jpeg" alt="[12022152] Nike Dunk Low Pro">
          <div class="product-details">
            <h3>[12022152] Nike Dunk Low Pro</h3>
            
            <span class="size">Tamanho: 39, 42</span>
            <span class="old-price">R$&nbsp;219,00</span>
             <span class="new-price">R$&nbsp;209,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021733-nike-dunk-low-pro.jpeg" alt="[12021733] Nike Dunk Low Pro">
          <div class="product-details">
            <h3>[12021733] Nike Dunk Low Pro</h3>
            
            <span class="size">Tamanho: 42</span>
            <span class="old-price">R$&nbsp;219,00</span>
             <span class="new-price">R$&nbsp;209,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021707-nike-jordan.jpeg" alt="[12021707] Nike Jordan">
          <div class="product-details">
            <h3>[12021707] Nike Jordan</h3>
            
            <span class="size">Tamanho: 38</span>
            <span class="old-price">R$&nbsp;169,00</span>
             <span class="new-price">R$&nbsp;159,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12022200-nike-air-jordan.jpeg" alt="[12022200] Nike Air Jordan">
          <div class="product-details">
            <h3>[12022200] Nike Air Jordan</h3>
            
            <span class="size">Tamanho: 41</span>
            <span class="old-price">R$&nbsp;229,00</span>
             <span class="new-price">R$&nbsp;219,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/adidas/12022201-adidas-campus.jpeg" alt="[12022201] Adidas Campus">
          <div class="product-details">
            <h3>[12022201] Adidas Campus</h3>
            
            <span class="size">Tamanho: 35</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/adidas/12022202-adidas-campus.jpeg" alt="[12022202] Adidas Campus">
          <div class="product-details">
            <h3>[12022202] Adidas Campus</h3>
            
            <span class="size">Tamanho: 35</span>
            <span class="old-price">R$&nbsp;259,00</span>
             <span class="new-price">R$&nbsp;249,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/adidas/12022208-adidas-campus.jpeg" alt="[12022208] Adidas Campus">
          <div class="product-details">
            <h3>[12022208] Adidas Campus</h3>
            
            <span class="size">Tamanho: 36</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/adidas/12022211-adidas-campus.jpeg" alt="[12022211] Adidas Campus">
          <div class="product-details">
            <h3>[12022211] Adidas Campus</h3>
            
            <span class="size">Tamanho: 39</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/adidas/12022155-adidas-campus.jpeg" alt="[12022155] Adidas Campus">
          <div class="product-details">
            <h3>[12022155] Adidas Campus</h3>
            
            <span class="size">Tamanho: 41</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/adidas/12022210-adidas-campus.jpeg" alt="[12022210] Adidas Campus">
          <div class="product-details">
            <h3>[12022210] Adidas Campus</h3>
            
            <span class="size">Tamanho: 42</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/vans/12021757-vans.jpeg" alt="[12021757] Vans">
          <div class="product-details">
            <h3>[12021757] Vans</h3>
            
            <span class="size">Tamanho: 36</span>
            <span class="old-price">R$&nbsp;259,00</span>
             <span class="new-price">R$&nbsp;249,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/asics/12021714-asics.jpeg" alt="[12021714] Asics">
          <div class="product-details">
            <h3>[12021714] Asics</h3>
            
            <span class="size">Tamanho: 38</span>
            <span class="price">R$&nbsp;89,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/asics/12021736-asics.jpeg" alt="[12021736] Asics">
          <div class="product-details">
            <h3>[12021736] Asics</h3>
            
            <span class="size">Tamanho: 41, 42</span>
            <span class="old-price">R$&nbsp;269,00</span>
             <span class="new-price">R$&nbsp;259,00</span>
          </div>
        </li></ul>
  </main>

  <!-- Modal container will be injected by the script -->
  
  <footer>
    <p>Versão: 2.0.2 - 0.32</p>
  </footer>

  <script src="scripts.js"></script>


<div id="product-modal">
        <div id="modal-content">
          <button id="modal-close">X</button>
          <div id="modal-image-container">
            <img id="modal-image" src="" alt="">
          </div>
          <div id="modal-controls">
            <button id="prev-image">&lt;</button>
            <button id="zoom-out">-</button>
            <button id="zoom-in">+</button>
            <button id="next-image">&gt;</button>
          </div>
        </div>
      </div>"
`;

exports[`Catalog Desktop View Matches snapshot for "Slippers" 1`] = `
"
  <header>
    <div class="header-logo">
      <img src="images/logo.jpeg" alt="M/A Imports Logo">
    </div>
  </header>

  <nav aria-label="Main Navigation">
    <button id="menu-toggle" aria-expanded="false" aria-controls="nav-menu">☰</button>
    <ul id="nav-menu">
      <li><button data-category="all">Início</button></li>
      <li><button data-category="shoes">Calçados</button></li>
      <li><button data-category="slippers">Chinelos</button></li>
      <li><button data-category="tshirts">Camisetas</button></li>
    </ul>
  </nav>

  <main>
    <h2 id="category-heading">Chinelos</h2>
    <ul id="product-list"><li class="product-item">
          <img src="images/slippers/tommy-hilfiger/17021140-tommy-hilfiger.jpeg" alt="[17021140] Tommy Hilfiger">
          <div class="product-details">
            <h3>[17021140] Tommy Hilfiger</h3>
            
            <span class="size">Tamanho: 37/38, 39/40</span>
            <span class="price">R$&nbsp;29,90</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li></ul>
  </main>

  <!-- Modal container will be injected by the script -->
  
  <footer>
    <p>Versão: 2.0.2 - 0.32</p>
  </footer>

  <script src="scripts.js"></script>


<div id="product-modal">
        <div id="modal-content">
          <button id="modal-close">X</button>
          <div id="modal-image-container">
            <img id="modal-image" src="" alt="">
          </div>
          <div id="modal-controls">
            <button id="prev-image">&lt;</button>
            <button id="zoom-out">-</button>
            <button id="zoom-in">+</button>
            <button id="next-image">&gt;</button>
          </div>
        </div>
      </div>"
`;

exports[`Catalog Desktop View Matches snapshot for "Tshirts" 1`] = `
"
  <header>
    <div class="header-logo">
      <img src="images/logo.jpeg" alt="M/A Imports Logo">
    </div>
  </header>

  <nav aria-label="Main Navigation">
    <button id="menu-toggle" aria-expanded="false" aria-controls="nav-menu">☰</button>
    <ul id="nav-menu">
      <li><button data-category="all">Início</button></li>
      <li><button data-category="shoes">Calçados</button></li>
      <li><button data-category="slippers">Chinelos</button></li>
      <li><button data-category="tshirts">Camisetas</button></li>
    </ul>
  </nav>

  <main>
    <h2 id="category-heading">Camisetas</h2>
    <ul id="product-list"><li class="product-item">
          <img src="images/tshirts/louis-vuitton/27020956-louis-vuitton.jpeg" alt="[27020956] Louis Vuitton">
          <div class="product-details">
            <h3>[27020956] Louis Vuitton</h3>
            <p class="description">Algodão Italiano</p>
            <span class="size">Tamanho: GG</span>
            <span class="price">R$&nbsp;89,90</span>
          </div>
        </li><li class="product-item">
          <img src="images/tshirts/dolce-gabbana/27020957-dolce-gabbana.jpeg" alt="[27020957] Dolce &amp; Gabbana">
          <div class="product-details">
            <h3>[27020957] Dolce &amp; Gabbana</h3>
            <p class="description">Algodão Peruano</p>
            <span class="size">Tamanho: GG</span>
            <span class="price">R$&nbsp;79,90</span>
          </div>
        </li><li class="product-item">
          <img src="images/tshirts/emporio-armani/27021001-emporio-armani.jpeg" alt="[27021001] Emporio Armani">
          <div class="product-details">
            <h3>[27021001] Emporio Armani</h3>
            <p class="description">Algodão Peruano</p>
            <span class="size">Tamanho: M</span>
            <span class="price">R$&nbsp;79,90</span>
          </div>
        </li><li class="product-item">
          <img src="images/tshirts/burberry/27021016-burberry.jpeg" alt="[27021016] Burberry">
          <div class="product-details">
            <h3>[27021016] Burberry</h3>
            <p class="description">Algodão Peruano</p>
            <span class="size">Tamanho: M</span>
            <span class="price">R$&nbsp;79,90</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li></ul>
  </main>

  <!-- Modal container will be injected by the script -->
  
  <footer>
    <p>Versão: 2.0.2 - 0.32</p>
  </footer>

  <script src="scripts.js"></script>


<div id="product-modal">
        <div id="modal-content">
          <button id="modal-close">X</button>
          <div id="modal-image-container">
            <img id="modal-image" src="" alt="">
          </div>
          <div id="modal-controls">
            <button id="prev-image">&lt;</button>
            <button id="zoom-out">-</button>
            <button id="zoom-in">+</button>
            <button id="next-image">&gt;</button>
          </div>
        </div>
      </div>"
`;

exports[`Catalog Mobile View Matches snapshot for "All Products" on mobile 1`] = `
"
  <header>
    <div class="header-logo">
      <img src="images/logo.jpeg" alt="M/A Imports Logo">
    </div>
  </header>

  <nav aria-label="Main Navigation" class="active">
    <button id="menu-toggle" aria-expanded="true" aria-controls="nav-menu">☰</button>
    <ul id="nav-menu">
      <li><button data-category="all">Início</button></li>
      <li><button data-category="shoes">Calçados</button></li>
      <li><button data-category="slippers">Chinelos</button></li>
      <li><button data-category="tshirts">Camisetas</button></li>
    </ul>
  </nav>

  <main>
    <h2 id="category-heading">Todos os Produtos</h2>
    <ul id="product-list"><li class="product-item">
          <img src="images/shoes/nike/12021658-nike-shox.jpeg" alt="[12021658] Nike Shox">
          <div class="product-details">
            <h3>[12021658] Nike Shox</h3>
            
            <span class="size">Tamanho: 37</span>
            <span class="old-price">R$&nbsp;259,00</span>
             <span class="new-price">R$&nbsp;249,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12022216-nike-shox.jpeg" alt="[12022216] Nike Shox">
          <div class="product-details">
            <h3>[12022216] Nike Shox</h3>
            
            <span class="size">Tamanho: 37</span>
            <span class="old-price">R$&nbsp;259,00</span>
             <span class="new-price">R$&nbsp;249,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021724-nike-shox.jpeg" alt="[12021724] Nike Shox">
          <div class="product-details">
            <h3>[12021724] Nike Shox</h3>
            
            <span class="size">Tamanho: 40</span>
            <span class="old-price">R$&nbsp;269,00</span>
             <span class="new-price">R$&nbsp;259,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12022214-nike-shox.jpeg" alt="[12022214] Nike Shox">
          <div class="product-details">
            <h3>[12022214] Nike Shox</h3>
            
            <span class="size">Tamanho: 40</span>
            <span class="old-price">R$&nbsp;269,00</span>
             <span class="new-price">R$&nbsp;259,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021722-nike-shox-neymar.jpeg" alt="[12021722] Nike Shox Neymar">
          <div class="product-details">
            <h3>[12021722] Nike Shox Neymar</h3>
            
            <span class="size">Tamanho: 41</span>
            <span class="old-price">R$&nbsp;269,00</span>
             <span class="new-price">R$&nbsp;259,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021734-nike-shox-neymar.jpeg" alt="[12021734] Nike Shox Neymar">
          <div class="product-details">
            <h3>[12021734] Nike Shox Neymar</h3>
            
            <span class="size">Tamanho: 41</span>
            <span class="old-price">R$&nbsp;269,00</span>
             <span class="new-price">R$&nbsp;259,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021718-nike-r4.jpeg" alt="[12021718] Nike R4">
          <div class="product-details">
            <h3>[12021718] Nike R4</h3>
            
            <span class="size">Tamanho: 34</span>
            <span class="old-price">R$&nbsp;229,00</span>
             <span class="new-price">R$&nbsp;219,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021716-nike-r4.jpeg" alt="[12021716] Nike R4">
          <div class="product-details">
            <h3>[12021716] Nike R4</h3>
            
            <span class="size">Tamanho: 35</span>
            <span class="old-price">R$&nbsp;229,00</span>
             <span class="new-price">R$&nbsp;219,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021703-nike-air-force.jpeg" alt="[12021703] Nike Air Force">
          <div class="product-details">
            <h3>[12021703] Nike Air Force</h3>
            
            <span class="size">Tamanho: 39</span>
            <span class="old-price">R$&nbsp;219,00</span>
             <span class="new-price">R$&nbsp;209,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021710-nike-air-force.jpeg" alt="[12021710] Nike Air Force">
          <div class="product-details">
            <h3>[12021710] Nike Air Force</h3>
            
            <span class="size">Tamanho: 42</span>
            <span class="old-price">R$&nbsp;269,00</span>
             <span class="new-price">R$&nbsp;259,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021739-nike-air-force.jpeg" alt="[12021739] Nike Air Force">
          <div class="product-details">
            <h3>[12021739] Nike Air Force</h3>
            
            <span class="size">Tamanho: 42</span>
            <span class="old-price">R$&nbsp;219,00</span>
             <span class="new-price">R$&nbsp;209,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021747-nike-air-force.jpeg" alt="[12021747] Nike Air Force">
          <div class="product-details">
            <h3>[12021747] Nike Air Force</h3>
            
            <span class="size">Tamanho: 38, 41, 42</span>
            <span class="old-price">R$&nbsp;229,00</span>
             <span class="new-price">R$&nbsp;219,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021737-nike-dunk-low-pro.jpeg" alt="[12021737] Nike Dunk Low Pro">
          <div class="product-details">
            <h3>[12021737] Nike Dunk Low Pro</h3>
            
            <span class="size">Tamanho: 35</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021719-nike-dunk-low-pro.jpeg" alt="[12021719] Nike Dunk Low Pro">
          <div class="product-details">
            <h3>[12021719] Nike Dunk Low Pro</h3>
            
            <span class="size">Tamanho: 36</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12022152-nike-dunk-low-pro.jpeg" alt="[12022152] Nike Dunk Low Pro">
          <div class="product-details">
            <h3>[12022152] Nike Dunk Low Pro</h3>
            
            <span class="size">Tamanho: 39, 42</span>
            <span class="old-price">R$&nbsp;219,00</span>
             <span class="new-price">R$&nbsp;209,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021733-nike-dunk-low-pro.jpeg" alt="[12021733] Nike Dunk Low Pro">
          <div class="product-details">
            <h3>[12021733] Nike Dunk Low Pro</h3>
            
            <span class="size">Tamanho: 42</span>
            <span class="old-price">R$&nbsp;219,00</span>
             <span class="new-price">R$&nbsp;209,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021707-nike-jordan.jpeg" alt="[12021707] Nike Jordan">
          <div class="product-details">
            <h3>[12021707] Nike Jordan</h3>
            
            <span class="size">Tamanho: 38</span>
            <span class="old-price">R$&nbsp;169,00</span>
             <span class="new-price">R$&nbsp;159,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12022200-nike-air-jordan.jpeg" alt="[12022200] Nike Air Jordan">
          <div class="product-details">
            <h3>[12022200] Nike Air Jordan</h3>
            
            <span class="size">Tamanho: 41</span>
            <span class="old-price">R$&nbsp;229,00</span>
             <span class="new-price">R$&nbsp;219,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/adidas/12022201-adidas-campus.jpeg" alt="[12022201] Adidas Campus">
          <div class="product-details">
            <h3>[12022201] Adidas Campus</h3>
            
            <span class="size">Tamanho: 35</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/adidas/12022202-adidas-campus.jpeg" alt="[12022202] Adidas Campus">
          <div class="product-details">
            <h3>[12022202] Adidas Campus</h3>
            
            <span class="size">Tamanho: 35</span>
            <span class="old-price">R$&nbsp;259,00</span>
             <span class="new-price">R$&nbsp;249,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/adidas/12022208-adidas-campus.jpeg" alt="[12022208] Adidas Campus">
          <div class="product-details">
            <h3>[12022208] Adidas Campus</h3>
            
            <span class="size">Tamanho: 36</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/adidas/12022211-adidas-campus.jpeg" alt="[12022211] Adidas Campus">
          <div class="product-details">
            <h3>[12022211] Adidas Campus</h3>
            
            <span class="size">Tamanho: 39</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/adidas/12022155-adidas-campus.jpeg" alt="[12022155] Adidas Campus">
          <div class="product-details">
            <h3>[12022155] Adidas Campus</h3>
            
            <span class="size">Tamanho: 41</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/adidas/12022210-adidas-campus.jpeg" alt="[12022210] Adidas Campus">
          <div class="product-details">
            <h3>[12022210] Adidas Campus</h3>
            
            <span class="size">Tamanho: 42</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/vans/12021757-vans.jpeg" alt="[12021757] Vans">
          <div class="product-details">
            <h3>[12021757] Vans</h3>
            
            <span class="size">Tamanho: 36</span>
            <span class="old-price">R$&nbsp;259,00</span>
             <span class="new-price">R$&nbsp;249,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/asics/12021714-asics.jpeg" alt="[12021714] Asics">
          <div class="product-details">
            <h3>[12021714] Asics</h3>
            
            <span class="size">Tamanho: 38</span>
            <span class="price">R$&nbsp;89,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/asics/12021736-asics.jpeg" alt="[12021736] Asics">
          <div class="product-details">
            <h3>[12021736] Asics</h3>
            
            <span class="size">Tamanho: 41, 42</span>
            <span class="old-price">R$&nbsp;269,00</span>
             <span class="new-price">R$&nbsp;259,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/slippers/tommy-hilfiger/17021140-tommy-hilfiger.jpeg" alt="[17021140] Tommy Hilfiger">
          <div class="product-details">
            <h3>[17021140] Tommy Hilfiger</h3>
            
            <span class="size">Tamanho: 37/38, 39/40</span>
            <span class="price">R$&nbsp;29,90</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/tshirts/louis-vuitton/27020956-louis-vuitton.jpeg" alt="[27020956] Louis Vuitton">
          <div class="product-details">
            <h3>[27020956] Louis Vuitton</h3>
            <p class="description">Algodão Italiano</p>
            <span class="size">Tamanho: GG</span>
            <span class="price">R$&nbsp;89,90</span>
          </div>
        </li><li class="product-item">
          <img src="images/tshirts/dolce-gabbana/27020957-dolce-gabbana.jpeg" alt="[27020957] Dolce &amp; Gabbana">
          <div class="product-details">
            <h3>[27020957] Dolce &amp; Gabbana</h3>
            <p class="description">Algodão Peruano</p>
            <span class="size">Tamanho: GG</span>
            <span class="price">R$&nbsp;79,90</span>
          </div>
        </li><li class="product-item">
          <img src="images/tshirts/emporio-armani/27021001-emporio-armani.jpeg" alt="[27021001] Emporio Armani">
          <div class="product-details">
            <h3>[27021001] Emporio Armani</h3>
            <p class="description">Algodão Peruano</p>
            <span class="size">Tamanho: M</span>
            <span class="price">R$&nbsp;79,90</span>
          </div>
        </li><li class="product-item">
          <img src="images/tshirts/burberry/27021016-burberry.jpeg" alt="[27021016] Burberry">
          <div class="product-details">
            <h3>[27021016] Burberry</h3>
            <p class="description">Algodão Peruano</p>
            <span class="size">Tamanho: M</span>
            <span class="price">R$&nbsp;79,90</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li></ul>
  </main>

  <!-- Modal container will be injected by the script -->
  
  <footer>
    <p>Versão: 2.0.2 - 0.32</p>
  </footer>

  <script src="scripts.js"></script>


<div id="product-modal">
        <div id="modal-content">
          <button id="modal-close">X</button>
          <div id="modal-image-container">
            <img id="modal-image" src="" alt="">
          </div>
          <div id="modal-controls">
            <button id="prev-image">&lt;</button>
            <button id="zoom-out">-</button>
            <button id="zoom-in">+</button>
            <button id="next-image">&gt;</button>
          </div>
        </div>
      </div>"
`;

exports[`Catalog Mobile View Matches snapshot for "Shoes" on mobile 1`] = `
"
  <header>
    <div class="header-logo">
      <img src="images/logo.jpeg" alt="M/A Imports Logo">
    </div>
  </header>

  <nav aria-label="Main Navigation" class="">
    <button id="menu-toggle" aria-expanded="false" aria-controls="nav-menu">☰</button>
    <ul id="nav-menu">
      <li><button data-category="all">Início</button></li>
      <li><button data-category="shoes">Calçados</button></li>
      <li><button data-category="slippers">Chinelos</button></li>
      <li><button data-category="tshirts">Camisetas</button></li>
    </ul>
  </nav>

  <main>
    <h2 id="category-heading">Calçados</h2>
    <ul id="product-list"><li class="product-item">
          <img src="images/shoes/nike/12021658-nike-shox.jpeg" alt="[12021658] Nike Shox">
          <div class="product-details">
            <h3>[12021658] Nike Shox</h3>
            
            <span class="size">Tamanho: 37</span>
            <span class="old-price">R$&nbsp;259,00</span>
             <span class="new-price">R$&nbsp;249,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12022216-nike-shox.jpeg" alt="[12022216] Nike Shox">
          <div class="product-details">
            <h3>[12022216] Nike Shox</h3>
            
            <span class="size">Tamanho: 37</span>
            <span class="old-price">R$&nbsp;259,00</span>
             <span class="new-price">R$&nbsp;249,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021724-nike-shox.jpeg" alt="[12021724] Nike Shox">
          <div class="product-details">
            <h3>[12021724] Nike Shox</h3>
            
            <span class="size">Tamanho: 40</span>
            <span class="old-price">R$&nbsp;269,00</span>
             <span class="new-price">R$&nbsp;259,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12022214-nike-shox.jpeg" alt="[12022214] Nike Shox">
          <div class="product-details">
            <h3>[12022214] Nike Shox</h3>
            
            <span class="size">Tamanho: 40</span>
            <span class="old-price">R$&nbsp;269,00</span>
             <span class="new-price">R$&nbsp;259,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021722-nike-shox-neymar.jpeg" alt="[12021722] Nike Shox Neymar">
          <div class="product-details">
            <h3>[12021722] Nike Shox Neymar</h3>
            
            <span class="size">Tamanho: 41</span>
            <span class="old-price">R$&nbsp;269,00</span>
             <span class="new-price">R$&nbsp;259,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021734-nike-shox-neymar.jpeg" alt="[12021734] Nike Shox Neymar">
          <div class="product-details">
            <h3>[12021734] Nike Shox Neymar</h3>
            
            <span class="size">Tamanho: 41</span>
            <span class="old-price">R$&nbsp;269,00</span>
             <span class="new-price">R$&nbsp;259,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021718-nike-r4.jpeg" alt="[12021718] Nike R4">
          <div class="product-details">
            <h3>[12021718] Nike R4</h3>
            
            <span class="size">Tamanho: 34</span>
            <span class="old-price">R$&nbsp;229,00</span>
             <span class="new-price">R$&nbsp;219,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021716-nike-r4.jpeg" alt="[12021716] Nike R4">
          <div class="product-details">
            <h3>[12021716] Nike R4</h3>
            
            <span class="size">Tamanho: 35</span>
            <span class="old-price">R$&nbsp;229,00</span>
             <span class="new-price">R$&nbsp;219,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021703-nike-air-force.jpeg" alt="[12021703] Nike Air Force">
          <div class="product-details">
            <h3>[12021703] Nike Air Force</h3>
            
            <span class="size">Tamanho: 39</span>
            <span class="old-price">R$&nbsp;219,00</span>
             <span class="new-price">R$&nbsp;209,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021710-nike-air-force.jpeg" alt="[12021710] Nike Air Force">
          <div class="product-details">
            <h3>[12021710] Nike Air Force</h3>
            
            <span class="size">Tamanho: 42</span>
            <span class="old-price">R$&nbsp;269,00</span>
             <span class="new-price">R$&nbsp;259,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021739-nike-air-force.jpeg" alt="[12021739] Nike Air Force">
          <div class="product-details">
            <h3>[12021739] Nike Air Force</h3>
            
            <span class="size">Tamanho: 42</span>
            <span class="old-price">R$&nbsp;219,00</span>
             <span class="new-price">R$&nbsp;209,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021747-nike-air-force.jpeg" alt="[12021747] Nike Air Force">
          <div class="product-details">
            <h3>[12021747] Nike Air Force</h3>
            
            <span class="size">Tamanho: 38, 41, 42</span>
            <span class="old-price">R$&nbsp;229,00</span>
             <span class="new-price">R$&nbsp;219,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021737-nike-dunk-low-pro.jpeg" alt="[12021737] Nike Dunk Low Pro">
          <div class="product-details">
            <h3>[12021737] Nike Dunk Low Pro</h3>
            
            <span class="size">Tamanho: 35</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021719-nike-dunk-low-pro.jpeg" alt="[12021719] Nike Dunk Low Pro">
          <div class="product-details">
            <h3>[12021719] Nike Dunk Low Pro</h3>
            
            <span class="size">Tamanho: 36</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12022152-nike-dunk-low-pro.jpeg" alt="[12022152] Nike Dunk Low Pro">
          <div class="product-details">
            <h3>[12022152] Nike Dunk Low Pro</h3>
            
            <span class="size">Tamanho: 39, 42</span>
            <span class="old-price">R$&nbsp;219,00</span>
             <span class="new-price">R$&nbsp;209,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021733-nike-dunk-low-pro.jpeg" alt="[12021733] Nike Dunk Low Pro">
          <div class="product-details">
            <h3>[12021733] Nike Dunk Low Pro</h3>
            
            <span class="size">Tamanho: 42</span>
            <span class="old-price">R$&nbsp;219,00</span>
             <span class="new-price">R$&nbsp;209,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12021707-nike-jordan.jpeg" alt="[12021707] Nike Jordan">
          <div class="product-details">
            <h3>[12021707] Nike Jordan</h3>
            
            <span class="size">Tamanho: 38</span>
            <span class="old-price">R$&nbsp;169,00</span>
             <span class="new-price">R$&nbsp;159,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/nike/12022200-nike-air-jordan.jpeg" alt="[12022200] Nike Air Jordan">
          <div class="product-details">
            <h3>[12022200] Nike Air Jordan</h3>
            
            <span class="size">Tamanho: 41</span>
            <span class="old-price">R$&nbsp;229,00</span>
             <span class="new-price">R$&nbsp;219,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/adidas/12022201-adidas-campus.jpeg" alt="[12022201] Adidas Campus">
          <div class="product-details">
            <h3>[12022201] Adidas Campus</h3>
            
            <span class="size">Tamanho: 35</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/adidas/12022202-adidas-campus.jpeg" alt="[12022202] Adidas Campus">
          <div class="product-details">
            <h3>[12022202] Adidas Campus</h3>
            
            <span class="size">Tamanho: 35</span>
            <span class="old-price">R$&nbsp;259,00</span>
             <span class="new-price">R$&nbsp;249,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/adidas/12022208-adidas-campus.jpeg" alt="[12022208] Adidas Campus">
          <div class="product-details">
            <h3>[12022208] Adidas Campus</h3>
            
            <span class="size">Tamanho: 36</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/adidas/12022211-adidas-campus.jpeg" alt="[12022211] Adidas Campus">
          <div class="product-details">
            <h3>[12022211] Adidas Campus</h3>
            
            <span class="size">Tamanho: 39</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/adidas/12022155-adidas-campus.jpeg" alt="[12022155] Adidas Campus">
          <div class="product-details">
            <h3>[12022155] Adidas Campus</h3>
            
            <span class="size">Tamanho: 41</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/adidas/12022210-adidas-campus.jpeg" alt="[12022210] Adidas Campus">
          <div class="product-details">
            <h3>[12022210] Adidas Campus</h3>
            
            <span class="size">Tamanho: 42</span>
            <span class="old-price">R$&nbsp;159,00</span>
             <span class="new-price">R$&nbsp;149,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/vans/12021757-vans.jpeg" alt="[12021757] Vans">
          <div class="product-details">
            <h3>[12021757] Vans</h3>
            
            <span class="size">Tamanho: 36</span>
            <span class="old-price">R$&nbsp;259,00</span>
             <span class="new-price">R$&nbsp;249,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/asics/12021714-asics.jpeg" alt="[12021714] Asics">
          <div class="product-details">
            <h3>[12021714] Asics</h3>
            
            <span class="size">Tamanho: 38</span>
            <span class="price">R$&nbsp;89,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/shoes/asics/12021736-asics.jpeg" alt="[12021736] Asics">
          <div class="product-details">
            <h3>[12021736] Asics</h3>
            
            <span class="size">Tamanho: 41, 42</span>
            <span class="old-price">R$&nbsp;269,00</span>
             <span class="new-price">R$&nbsp;259,00</span>
          </div>
        </li></ul>
  </main>

  <!-- Modal container will be injected by the script -->
  
  <footer>
    <p>Versão: 2.0.2 - 0.32</p>
  </footer>

  <script src="scripts.js"></script>


<div id="product-modal">
        <div id="modal-content">
          <button id="modal-close">X</button>
          <div id="modal-image-container">
            <img id="modal-image" src="" alt="">
          </div>
          <div id="modal-controls">
            <button id="prev-image">&lt;</button>
            <button id="zoom-out">-</button>
            <button id="zoom-in">+</button>
            <button id="next-image">&gt;</button>
          </div>
        </div>
      </div>"
`;

exports[`Catalog Mobile View Matches snapshot for "Slippers" on mobile 1`] = `
"
  <header>
    <div class="header-logo">
      <img src="images/logo.jpeg" alt="M/A Imports Logo">
    </div>
  </header>

  <nav aria-label="Main Navigation" class="">
    <button id="menu-toggle" aria-expanded="false" aria-controls="nav-menu">☰</button>
    <ul id="nav-menu">
      <li><button data-category="all">Início</button></li>
      <li><button data-category="shoes">Calçados</button></li>
      <li><button data-category="slippers">Chinelos</button></li>
      <li><button data-category="tshirts">Camisetas</button></li>
    </ul>
  </nav>

  <main>
    <h2 id="category-heading">Chinelos</h2>
    <ul id="product-list"><li class="product-item">
          <img src="images/slippers/tommy-hilfiger/17021140-tommy-hilfiger.jpeg" alt="[17021140] Tommy Hilfiger">
          <div class="product-details">
            <h3>[17021140] Tommy Hilfiger</h3>
            
            <span class="size">Tamanho: 37/38, 39/40</span>
            <span class="price">R$&nbsp;29,90</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li></ul>
  </main>

  <!-- Modal container will be injected by the script -->
  
  <footer>
    <p>Versão: 2.0.2 - 0.32</p>
  </footer>

  <script src="scripts.js"></script>


<div id="product-modal">
        <div id="modal-content">
          <button id="modal-close">X</button>
          <div id="modal-image-container">
            <img id="modal-image" src="" alt="">
          </div>
          <div id="modal-controls">
            <button id="prev-image">&lt;</button>
            <button id="zoom-out">-</button>
            <button id="zoom-in">+</button>
            <button id="next-image">&gt;</button>
          </div>
        </div>
      </div>"
`;

exports[`Catalog Mobile View Matches snapshot for "Tshirts" on mobile 1`] = `
"
  <header>
    <div class="header-logo">
      <img src="images/logo.jpeg" alt="M/A Imports Logo">
    </div>
  </header>

  <nav aria-label="Main Navigation" class="">
    <button id="menu-toggle" aria-expanded="false" aria-controls="nav-menu">☰</button>
    <ul id="nav-menu">
      <li><button data-category="all">Início</button></li>
      <li><button data-category="shoes">Calçados</button></li>
      <li><button data-category="slippers">Chinelos</button></li>
      <li><button data-category="tshirts">Camisetas</button></li>
    </ul>
  </nav>

  <main>
    <h2 id="category-heading">Camisetas</h2>
    <ul id="product-list"><li class="product-item">
          <img src="images/tshirts/louis-vuitton/27020956-louis-vuitton.jpeg" alt="[27020956] Louis Vuitton">
          <div class="product-details">
            <h3>[27020956] Louis Vuitton</h3>
            <p class="description">Algodão Italiano</p>
            <span class="size">Tamanho: GG</span>
            <span class="price">R$&nbsp;89,90</span>
          </div>
        </li><li class="product-item">
          <img src="images/tshirts/dolce-gabbana/27020957-dolce-gabbana.jpeg" alt="[27020957] Dolce &amp; Gabbana">
          <div class="product-details">
            <h3>[27020957] Dolce &amp; Gabbana</h3>
            <p class="description">Algodão Peruano</p>
            <span class="size">Tamanho: GG</span>
            <span class="price">R$&nbsp;79,90</span>
          </div>
        </li><li class="product-item">
          <img src="images/tshirts/emporio-armani/27021001-emporio-armani.jpeg" alt="[27021001] Emporio Armani">
          <div class="product-details">
            <h3>[27021001] Emporio Armani</h3>
            <p class="description">Algodão Peruano</p>
            <span class="size">Tamanho: M</span>
            <span class="price">R$&nbsp;79,90</span>
          </div>
        </li><li class="product-item">
          <img src="images/tshirts/burberry/27021016-burberry.jpeg" alt="[27021016] Burberry">
          <div class="product-details">
            <h3>[27021016] Burberry</h3>
            <p class="description">Algodão Peruano</p>
            <span class="size">Tamanho: M</span>
            <span class="price">R$&nbsp;79,90</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li><li class="product-item">
          <img src="images/comming-soon.jpg" alt="Em breve">
          <div class="product-details">
            <h3>Em breve</h3>
            
            
            <span class="price">R$&nbsp;0,00</span>
          </div>
        </li></ul>
  </main>

  <!-- Modal container will be injected by the script -->
  
  <footer>
    <p>Versão: 2.0.2 - 0.32</p>
  </footer>

  <script src="scripts.js"></script>


<div id="product-modal">
        <div id="modal-content">
          <button id="modal-close">X</button>
          <div id="modal-image-container">
            <img id="modal-image" src="" alt="">
          </div>
          <div id="modal-controls">
            <button id="prev-image">&lt;</button>
            <button id="zoom-out">-</button>
            <button id="zoom-in">+</button>
            <button id="next-image">&gt;</button>
          </div>
        </div>
      </div>"
`;
